--- a/src/test/web/index.html
+++ b/src/test/web/index.html
@@ -17,7 +17,11 @@
 
 <h1>Test Form page</h1>
 
-<button onclick="f.ct(event)">TEST</button>
+<div>
+    <input id="serverAddress" placeholder="server-adress" value="http://localhost:8080"/>
+</div>
+
+<hr/>
 
 <form id="form" onsubmit="f.sendForm(event); return false;">
     <div>
